--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "5.6.3",
-    "bootstrap": "4.2.1",
+    "@ng-bootstrap/ng-bootstrap": "4.0.2",
     "core-js": "^2.5.4",
     "firebase": "5.8.1",
     "ngx-image-cropper": "1.3.8",
